# xLIB

./: .gitignore  Cargo.toml  README.md  cargo.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.docs/: README.md  SUMMARY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci_cd.yml
dalmatia/: __init__.py  database.py
dalmatia/tests/: test_database.py
dalmatium/: Cargo.toml  __config__.rs  __init__.py  __init__.rs  database.py  database.rs  forger.rs  pyproject.toml  reader.rs  theme.py  wrapper.py  wrapper.rs
dalmatium/assets/theme/palette/: __init__.py  dark.py  light.py
dalmatium/assets/theme/rc_icons/: __init__.py  dark.py  light.py
dalmatium/assets/theme/stylesheet/: __init__.py  dark.py  light.py
dalmatium/src/: config.rs  database.rs  forger.rs  lib.rs  main.rs  reader.rs  wrapper.rs
dalmatium/tests/: test_forger.rs
docs/: README.md  SUMMARY.md  quick-start.md
docs/utils/: database.md  forger.md  reader.md  wrapper.md
old/: __config__.rs
wiki/: SUMMARY.md  readme.md
xlib/: Cargo.toml  pyproject.toml
xlib/src/: forger.rs  lib.rs
xlib/tests/: test_forger.rs
