[package]
name = "dalmatium"
version = "2.0.0"
edition = "2021"
authors = ["IllyrionSoftware <https://illyrion.eu/>"]
description = "Our Library enforcing the DRY principle and making code REUSABLE."
license = "AGPL-3.0"
repository = "https://github.com/IllyrionSoftware/Dalmatium"
readme = "../README.md"
keywords = ["dry", "reusable", "library"]
categories = ["development-tools::bindings", "asynchronous"]
homepage = "https://illyrion.eu/dalmatium"
documentation = "https://docs.illyrion.eu/dalmatium"
publish = true

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
libloading = "0.8.4"
rusqlite = "0.31.0"
tempfile = "3.10.1"

[lib]
crate-type = ["cdylib", "rlib"]
