[package]
name = "xlib"
version = "2.0.0"
edition = "2021"
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "Python Library written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xLIB"
keywords = ["dry", "reusable", "library"]
categories = ["development-tools::bindings", "asynchronous"]
homepage = "https://xodium.org/"
documentation = "https://wiki.xodium.org/xLIB"
publish = true

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
libloading = "0.8.4"
rusqlite = "0.32.0"
tempfile = "3.10.1"

[lib]
crate-type = ["cdylib", "rlib"]
