[package]
name = "xlib"
version = "1.0.0"
edition = "2021"
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "Xodium Library written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xLIB"
keywords = ["dry", "reusable", "library"]
categories = ["development-tools::bindings", "asynchronous"]
homepage = "https://xodium.org/"
documentation = "https://wiki.xodium.org/xLIB"
publish = true

[dependencies]
libloading = "0.8.5"
rusqlite = "0.32.1"
tempfile = "3.12.0"

[lib]
crate-type = ["cdylib", "rlib"]
